# opengl-engine3d

./: .gitignore  CMakeLists.txt  README.md  fragment.glsl  fragmentGouraud.glsl  fragmentLightSource.glsl  fragmentSolid.glsl  grass.glsl  normals.glsl  singleColor.glsl  uvs.glsl  vertex.glsl  vertexGouraud.glsl  vertexLightSource.glsl  vertexSolid.glsl  vmodel.txt  vstair.txt  vwalls.txt
assets/crate/: crate.mtl
assets/cylinder/: cylinder.mtl
assets/ground/: ground.mtl
assets/laubbaum/: laubbaum.mtl
assets/light-handle/: light-handle.mtl
assets/pickme/: pickme.mtl
assets/pink/: pink.mtl
include/glad/: glad.h
src/: basemodel.hpp  camera.cpp  camera.hpp  gfxengine.cpp  gfxengine.hpp  glad.c  gui.cpp  gui.hpp  light.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  object.cpp  object.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  util.cpp  util.hpp  voxelmodel.cpp  voxelmodel.hpp
